--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -3,3 +3,10 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.errorMessage {
+  font-size: 18px;
+  color: red;
+  margin-left: auto;
+  margin-right: auto;
+}
